@@ -10,6 +10,7 @@ set(HEADER_FILES
   application/instrument_request.hpp
   application/command/note_edit_command.hpp
   application/command/undo_stack.hpp
+  application/models/audio_settings_model.hpp
   application/models/column_settings_model.hpp
   application/models/event_selection_model.hpp
   application/models/midi_cc_automations_model.hpp
@@ -98,6 +99,7 @@ set(SOURCE_FILES
   application/instrument_request.cpp
   application/command/note_edit_command.cpp
   application/command/undo_stack.cpp
+  application/models/audio_settings_model.cpp
   application/models/column_settings_model.cpp
   application/models/event_selection_model.cpp
   application/models/midi_cc_automations_model.cpp
